# VisualDiffTool

./: .gitignore  CMakeLists.txt  readme.md  shell.nix
src/: main.cpp
src/Button/: Button.cpp  Button.hpp  IDrawableFactory.cpp  IDrawableFactory.hpp  IDrawableManager.cpp  IDrawableManager.hpp
src/Button/EBO/: EBO.cpp  EBO.hpp
src/Button/IDrawableFactory/: IDrawableFactory.cpp  IDrawableFactory.hpp
src/Button/IDrawableFactory/Buttons/: Button.cpp  Button.hpp
src/Button/IDrawableFactory/Buttons/ButtonColors/: ButtonColors.cpp  ButtonColors.hpp
src/Button/IDrawableFactory/Buttons/ButtonColors/ColorValueWrapper/: ColorValueWrapper.cpp  ColorValueWrapper.hpp
src/Button/IDrawableFactory/Buttons/EBO/: EBO.cpp  EBO.hpp
src/Button/IDrawableFactory/Buttons/VAO/: VAO.cpp  VAO.hpp
src/Button/IDrawableFactory/Buttons/VBO/: VBO.cpp  VBO.hpp
src/Button/VAO/: VAO.cpp  VAO.hpp
src/Button/VBO/: VBO.hpp
src/Button/Vect2D/: Vect2D.cpp  Vect2D.hpp
src/WindowApp/: WindowApp.cpp  WindowApp.hpp
src/WindowApp/Inputs/: Inputs.cpp  Inputs.hpp
src/WindowApp/Shaders/: Shaders.cpp  Shaders.hpp
src/WindowApp/Shaders/ShaderInfo/: default.frag  default.vert
src/WindowApp/VAO/: VAO.cpp  VAO.hpp
src/WindowManager/: WindowManager.cpp  WindowManager.hpp
src/WindowManager/Shaders/: Shaders.cpp  Shaders.hpp
src/WindowManager/Shaders/ShaderInfo/: default.vert
